<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/mclaren"
                    tools:text="@string/title_example"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/cover_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/desc_cover"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_home_black_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/favorite_button" />

        </FrameLayout>

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/desc_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_round_local_movies_24"
            tools:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingMultiplier="1.0"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/cover_layout"
            tools:text="@string/title_example" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/duration_example" />

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_date_title"
            app:layout_constraintTop_toBottomOf="@id/tv_date_title"
            tools:text="@string/date_example" />

        <TextView
            android:id="@+id/tv_desc_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_desc_title"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_title"
            tools:text="@string/desc_example"/>

        <TextView
            android:id="@+id/tv_genre_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/tv_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_title"
            tools:text="@string/genre_example"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:indeterminate="true"
            app:mpb_progressStyle="horizontal"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal.NoPadding"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>