<resources>
    <string name="app_name">DutaMovie</string>
    <string name="date_example">Apr 16, 2021</string>
    <string name="title_example">Movie/Tv Show Title</string>
    <string name="poster_description">Poster</string>
    <string name="tab_movie">MOVIE</string>
    <string name="tab_tvshow">TV SHOW</string>
    <string name="desc_cover">Cover Image</string>
    <string name="desc_poster">Poster Image</string>
    <string name="duration_example">100 Minutes</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="desc_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="genre">Genre</string>
    <string name="genre_example">Action, Drama, Comedy, Sci_Fi, Romance</string>
    <string name="logo_application">Logo Application</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="fav_movie_deleted">Movie favorite deleted</string>
    <string name="fav_tvshow_deleted">Tv Show favorite deleted</string>
    <string name="undo_deleted">UNDO</string>
    <string name="empty_fav_movie">No Favorite Movie</string>
    <string name="empty_fav_tvshow">No Favorite Tv Show</string>
    <string name="favorite_button">Button Favorite</string>
</resources>